@@ -1,6 +1,11 @@
 2015-10-25  Natalia Portillo  <claunia@claunia.com>
 
 	* SCSI/Modes.cs:
+	  Implemented decoding mode page 02h.
+
+2015-10-25  Natalia Portillo  <claunia@claunia.com>
+
+	* SCSI/Modes.cs:
 	  Implemented decoding mode page 0Ah.
 
 2015-10-25  Natalia Portillo  <claunia@claunia.com>
